--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-image: url('img/Tashi.png'); /* Update with the correct image URL */
+  background-image: url('Tashi.png'); /* Update with the correct image URL */
   background-size: cover;
   background-position: center center;
   background-attachment: fixed; /* Optional: To create a parallax effect */
