--- a/style/main.css
+++ b/style/main.css
@@ -111,6 +111,7 @@ body {
   display: inline-block;
   height: 350px;
   max-width: 100%;
+  
   /* height: auto; */
 }
 
@@ -119,6 +120,7 @@ body {
 /*   position: absolute; */
   /* transform: scale(0.1); */
   top: -28%;
+  transform: translateX(50px);
   width: 80px;
 }
 
