--- a/style/main.css
+++ b/style/main.css
@@ -117,10 +117,9 @@ body {
 
 .six .hat {
   left: 85.5%;
-/*   position: absolute; */
-  /* transform: scale(0.1); */
+  position: absolute;
+  transform: scale(0.1);
   top: -28%;
-  transform: translateX(50px);
   width: 80px;
 }
 
