--- a/style/main.css
+++ b/style/main.css
@@ -118,7 +118,7 @@ body {
 .six .hat {
   left: 85.5%;
   position: absolute;
-  transform: scale(0.1);
+/*   transform: scale(0.1); */
   top: -28%;
   width: 80px;
 }
